# Gyroscopic-stabilized-

./: .gitignore  Full_module.py  Makefile  README.md  USAGE.md  extracted_code.py  requirements.txt  setup.py  test_config.yaml  test_rcc_integration.py  test_three_time_system.py
app/ads_cft_compliance/: README.md
app/bounce_service/: README.md
app/inflation_service/: README.md
app/orchestrators/: README.md
app/rge_service/: README.md
app/veff_service/: README.md
apps/: init.py
apps/ads_cft_compliance/: api.py
apps/bounce_service/: api.py  init.py
apps/engine/: __init__.py  engine_service.py  final_recordings.csv  main.py  test_recordings.jsonl
apps/engine/test_snapshots/: snapshot_step_000000.yaml  snapshot_step_000002.yaml  snapshot_step_000004.yaml
apps/inflation_service/: api.py  init.py
apps/orchestrators/: higgs_pipeline.py
apps/rge_service/: __init__.py  api.py  sm_beta.py
apps/veff_service/: api.py  init.py
architectures/: __init__.py  brontein_cube.py
configs/: default.yaml
control/: __init__.py  recursive_loop.py
diagnostics/: README.md  __init__.py  contextuality.py  echo_meter.py  integration_example.py  micro_diagnostics.py  minimal_integration_example.py  scar_metrics.py  stress_tests.py  test_contextuality.py  test_diagnostics.py
docs/: physics_primitives_services.md
examples/: physics_primitives_demo.py  stress_testing_example.py
gauge/: __init__.py  proper_time_field.py
geometry/: __init__.py  mera_radial_map.py
integration/: __init__.py  hooks_core.py  time_echo_hooks.py
physics/: __init__.py  coherence_gamma.py  torsion_ec.py  wormhole_mt.py
pkgs/certs/: __init__.py  contextuality.py  ks_rays_57.csv
pkgs/chaos/: __init__.py  loschmidt.py
pkgs/core_physics/: __init__.py  common.py  control.py  fields.py  lattice.py  tensors.py  timeops.py  utils.py
pkgs/diagnostics/: __init__.py  scar_metrics.py
pkgs/engine_runtime/: __init__.py  contractor.py  rcc.py  recorder.py
protocols/: __init__.py  time_echo.py
quantum-core/: README.md  __init__.py  pyproject.toml
quantum-core/apps/: __init__.py
quantum-core/apps/engine/: __init__.py  engine_service.py  main.py
quantum-core/apps/probes/: __init__.py  echo_meter.py  qei_kernel.py
quantum-core/apps/qec/: surface_code.py  tn_decoder.py
quantum-core/configs/: default.yaml
quantum-core/configs/profiles/: dev.yaml  gpu.yaml
quantum-core/pkgs/: __init__.py
quantum-core/pkgs/adapters/: __init__.py  complex_langevin.py  lgt_cube.py  wormhole_ops.py
quantum-core/pkgs/core_physics/: __init__.py  control.py  fields.py  lattice.py  tensors.py  timeops.py  utils.py
quantum-core/pkgs/engine_runtime/: __init__.py  contractor.py  rcc.py  recorder.py  schemas.py
quantum-core/pkgs/observability/: __init__.py  events.py  logging.py  metrics.py
quantum-core/tests/: test_core_physics.py  test_integration.py
services/: __init__.py  rt_metrics.py
timeops/: __init__.py  three_time_ops.py
